<resources>
    <string name="app_name">Odds Are</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="title_new_odds">New Odds</string>
    <string name="sign_out">Sign Out</string>
    <string name="search">Search</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_with_facebook">Sign In with Facebook</string>
    <string name="sign_up_with_email">Sign up with email</string>
</resources>
