<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:ems="10"
            android:id="@+id/et_email" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/et_username" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="99dp" android:layout_marginStart="99dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="99dp" android:layout_marginRight="99dp" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/et_password" tools:ignore="Autofill"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:ems="10"
            android:id="@+id/et_username"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="99dp"
            android:layout_marginStart="99dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="99dp"
            android:layout_marginRight="99dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/et_name" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/et_email" tools:ignore="Autofill"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password"
            android:id="@+id/et_password"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="99dp"
            android:layout_marginStart="99dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="99dp"
            android:layout_marginRight="99dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/et_email" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/et_reenter_password" tools:ignore="Autofill"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:ems="10"
            android:id="@+id/et_reenter_password"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="99dp"
            android:layout_marginStart="99dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="99dp"
            android:layout_marginRight="99dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/et_password" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/b_sign_up" tools:ignore="Autofill"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/name"
            android:id="@+id/et_name" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="99dp" android:layout_marginStart="99dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="99dp" android:layout_marginRight="99dp" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/et_username" tools:ignore="Autofill"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/b_sign_up" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/et_reenter_password"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="132dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="162dp" android:layout_marginRight="162dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="162dp"
            android:layout_marginStart="162dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>